services/educs/redis/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  strategy:
    type: Recreate
  template:
    spec:
      terminationGracePeriodSeconds: 20
      containers:
      - name: redis
        image: redis
        resources:
          requests:
            cpu: "100m"
            memory: "100Mi"
        ports:
            - name: redis
              containerPort: 6379
              protocol: "TCP"
            - name: cluster
              containerPort: 16379
              protocol: "TCP"
        startupProbe:
          periodSeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 20
          tcpSocket:
            port: redis
        livenessProbe:
          periodSeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 5
          exec:
            command: ["sh", "-c", "/probes/liveness.sh"]
        readinessProbe:
          periodSeconds: 5
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 5
          exec:
            command: ["sh", "-c", "/probes/readiness.sh"]
        volumeMounts:
        - name: data
          mountPath: /data
          readOnly: false
        - name: probes
          mountPath: /probes
          readOnly: true
      volumes:
      - name: probes
        configMap:
          name: redis-probes
          defaultMode: 0555
      - name: redis-persistent-storage
        persistentVolumeClaim: 
          claimName: redis-pvc
