services/educs/redis/service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  ports:
  - name: redis-port
    port: 6379
    protocol: TCP
    targetPort: 6379
  sessionAffinity: None
  type: ClusterIP
